# portfolio-site

./: .gitignore  Dockerfile  README.md  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml
backend/: backend.py  requirements.txt
backend/api/: basics.py
frontend/: Dockerfile  fly.toml  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  Main.js  index.js
frontend/src/components/: Canvas.js  Main.js  ProjectCard.js  ProjectDetails.js
frontend/src/json/: projects.json
frontend/src/pages/: Homepage.js  Recipes.js
frontend/src/styles/: styles.css
src/app/: layout.tsx  page.tsx
src/components/: Canvas.tsx  Footer.tsx  PageIntro.tsx  ProjectCard.tsx  ProjectDetailWrapper.tsx  ProjectDetails.tsx  ProjectGrid.tsx
src/hooks/: useProjects.ts
src/json/: projects.json
