[tool.poetry]
name = "dev-portfolio-website"
version = "0.1.0"
description = ""
authors = ["MattBarkway <contact@mattbarkway.dev>"]
readme = "README.md"
packages = [{include = "dev_portfolio_website"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

